grammar.js
    structure: $ => list($.semicolon, $.structure_item),

    structure_item: $ => choice(
      $.type_definition,
      $.error_type_definition,
      $.struct_definition,
      $.enum_definition,
      $.value_definition,
      $.const_definition,
      $.function_definition,
      $.test_definition,
      $.trait_definition,
      $.impl_definition,
      $.type_alias_definition,
      $.trait_alias_definition,
      $.function_alias_definition,
    ),

    function_definition: $ => seq(
      optional($.attributes),
      optional($.visibility),
      optional($.external_linkage),
      optional('async'),
      'fn',
      $.function_identifier,
      optional('!'),
      optional($.type_parameters),
      optional($.parameters),
      optional($.return_type),
      choice(
        $.block_expression,
        seq('=', $.external_source),
      ),
    ),

    expression: $ => choice(
      $.if_expression,
      $.while_expression,
      $.loop_expression,
      $.match_expression,
      $.for_expression,
      $.for_in_expression,
      $.try_expression,
      $.xml_expression,
      $.pipeline_expression,
    ),

    pipeline_expression: $ => choice(
      seq($.pipeline_expression, $.pipe_operator, $.compound_expression),
      $.compound_expression,
    ),

    compound_expression: $ => choice(
      $.range_expression,
      $.postfix_expression,
      $.simple_expression,
      $.binary_expression,
    ),

    simple_expression: $ => choice(
      $.atomic_expression,
      $.qualified_identifier,
      $.unary_expression,
      $.struct_expression,
      $.nonempty_block_expression,
      $.anonymous_lambda_expression,
      $.anonymous_matrix_lambda_expression,
      $.constructor_expression,
      $.apply_expression,
      $.array_access_expression,
      $.dot_apply_expression,
      $.dot_dot_apply_expression,
      $.access_expression,
      $.method_expression,
      $.unit_expression,
      $.tuple_expression,
      $.constraint_expression,
      $.array_expression,
      $.map_expression,
      '_',
    ),

    atomic_expression: $ => choice(
      $.string_interpolation,
      $.literal,
    ),

    literal: $ => choice(
      $.boolean_literal,
      $.float_literal,
      $.integer_literal,
      $.byte_literal,
      $.char_literal,
      $.string_literal,
      $.bytes_literal,
      $.multiline_string_literal,
    ),

    integer_literal: _ => token(choice(
      /[0-9][0-9_]*(UL|U|L|N)?/,
      /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
      /0[oO][0-7_]+(UL|U|L|N)?/,
      /0[bB][01_]+(UL|U|L|N)?/,
    )),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    string_literal: $ => seq(
      '"',
      repeat($.string_fragment),
      '"',
    ),

    string_fragment: $ => choice(
      $.unescaped_string_fragment,
      $.escape_sequence,
    ),

    unescaped_string_fragment: _ => choice(
      token.immediate(prec(1, /\\[^ntbr'"\\{]/)),
      token.immediate(prec(1, /[^"\\]+/)),
    ),

    binary_expression: $ => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.shift, choice(...shift_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.bitwise_and, '&'],
        [PREC.bitwise_xor, '^'],
        [PREC.bitwise_or, '|'],
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.pipe, $.pipe_operator],
      ];

      return choice(...table.map(([precedence, operator]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          $.compound_expression,
          // @ts-ignore
          operator,
          $.compound_expression,
        )),
      ));
    },

    block_expression: $ => seq(
      '{',
      list($.semicolon, $.statement_expression),
      '}',
    ),

    if_expression: $ => seq(
      'if',
      $.compound_expression,
      $.block_expression,
      optional($.else_clause),
    ),

    else_clause: $ => seq(
      'else',
      choice(
        $.block_expression,
        $.if_expression,
      ),
    ),

    statement_expression: $ => choice(
      $.struct_definition,
      $.enum_definition,
      $.type_definition,
      $.let_expression,
      $.let_mut_expression,
      $.guard_expression,
      $.guard_let_expression,
      $.assign_expression,
      $.named_lambda_expression,
      $.named_matrix_expression,
      $.break_expression,
      $.continue_expression,
      $.return_expression,
      $.raise_expression,
      $.expression,
      $.unfinished,
    ),

    let_expression: $ => seq(
      'let',
      $.pattern,
      optional($.type_annotation),
      '=',
      $.expression,
    ),

    pattern: $ => choice(
      $.simple_pattern,
      $.range_pattern,
      $.as_pattern,
      $.or_pattern,
    ),

    simple_pattern: $ => choice(
      '_',
      $.dot_dot,
      seq('(', $.pattern, ')'),
      $.literal,
      seq('-', $.integer_literal),
      seq('-', $.float_literal),
      $.lowercase_identifier,
      $.constructor_pattern,
      $.tuple_pattern,
      $.constraint_pattern,
      $.array_pattern,
      $.struct_pattern,
      $.map_pattern,
      $.empty_struct_or_map_pattern,
    ),

    type: $ => choice(
      $.tuple_type,
      $.function_type,
      $.apply_type,
      $.option_type,
      $.trait_object_type,
      $.any,
    ),

    apply_type: $ => seq($.qualified_type_identifier, optional($.type_arguments)),

    return_type: $ => seq('->', choice($.type, $.type_with_error)),

    parameters: $ => seq(
      '(',
      list(',', $.parameter),
      ')',
    ),

    uppercase_identifier: _ => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    lowercase_identifier: _ => /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,

    identifier: $ => choice(
      $.uppercase_identifier,
      $.lowercase_identifier,
    ),

    semicolon: $ => choice($.automatic_semicolon, ';'),

    qualified_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.package_identifier, $.dot_lowercase_identifier),
    ),

    qualified_type_identifier: $ => choice(
      $.identifier,
      seq($.package_identifier, $.dot_identifier),
    ),

    function_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.type_name, $.colon_colon, $.lowercase_identifier),
    ),

    xml_expression: $ => seq(
      $.xml_opening_element,
      $.xml_content,
      $.xml_closing_element
    ),

    xml_opening_element: $ => seq(
      '<',
      $.xml_identifier,
      repeat(seq(
        $.xml_attribute
      )),
      '>'
    ),

    xml_closing_element: $ => seq(
      '</',
      $.xml_identifier,
      '>'
    ),

    xml_identifier: _ => /[a-zA-Z][a-zA-Z0-9_-]*/,

    xml_text: $ => prec.left(1, choice(
      token.immediate(/[^<>{}/\s][^<>{}/]*/),
      seq(
        choice(
          token.immediate(/[^<>{}/\s][^<>{}/]*/),
          $.xml_interpolation
        ),
        repeat(choice(
          token.immediate(/[^<>{}/][^<>{}/]*/),
          $.xml_interpolation
        ))
      )
    )),

    xml_interpolation: $ => prec(PREC.xml_interpolation, seq(
      '{',
      $.expression,
      '}'
    )),

    xml_content: $ => prec.right(PREC.xml_repeat,
      repeat1(choice(
        $.xml_expression,
        $.xml_text,
        $.xml_self_closing_element
      ))
    ),
  },
});

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {Rule}
 */
function list(separator, rule) {
  return optional(list1(separator, rule));
}

/**
 *
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function list1(separator, rule) {
  return seq(
    rule,
    repeat(seq(separator, rule)),
    optional(separator),
  );
}

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {Rule}
 */
function strictList(separator, rule) {
  return optional(strictList1(separator, rule));
}

/**
 * @param {RuleOrLiteral} separator
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function strictList1(separator, rule) {
  return seq(
    rule,
    repeat(seq(separator, rule)),
  );
}

/**
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function plusList(rule) {
  return optional(plusList1(rule));
}


/**
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function plusList1(rule) {
  return seq(
    rule,
    repeat(seq('+', rule)),
    // no trailing separator
  );
}
